--- a/frontend/scss/organisms/_section-hero-set.scss
+++ b/frontend/scss/organisms/_section-hero-set.scss
@@ -36,7 +36,7 @@
   }
 
   .swiper-container {
-    // padding: 0;
+    padding: 0;
   }
 
   .swiper-container,
